--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "Daniel Nyikó",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "nodemon": "^2.0.22"
   }
 }
