--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Daniel Nyikó",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.18.2",
